--- a/WEB/Web.config
+++ b/WEB/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DBPath" connectionString="Data Source=213.243.28.216;Initial Catalog=Membership;Persist Security Info=True;User ID=sa;Password=56a4fe6a5w4feAEa23;MultipleActiveResultSets=true;Application Name=Membership;" providerName="System.Data.SqlClient" />
+    
 
-    <!--<add name="DBPath" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WEB-20160208053308.mdf;Initial Catalog=aspnet-WEB-20160208053308;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DBPath" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WEB-20160208053308.mdf;Initial Catalog=aspnet-WEB-20160208053308;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="owin:AutomaticAppStartup" value="false" />
